docs: update api Authorization header
